Day 1 (2024-01-28)
    - Set up project
    - Wrote Makefile and CHANGELOG

Day 2 (2024-01-29)
    - Completed basic version of coloring.c
    - Started working on output in main.c
    - Establised project structure
    - Improved Makefile
    - Generated a flat map with borders and printed it to stdout
    - Can now play full image sequence
    - First successful voronoi noise
    - Improved bash command for playing full animation
    - Voronoi done, animation done; only road placement remains.